# xDetect

./: .gitignore  pyproject.toml  run_pipeline.py  test_hc3_only.py
configs/: datasets.yaml  models.yaml
src/: config.py
src/acquisition/: hc3.py  multitude.py
src/baselines/: backbone_trainer.py  statistical_baseline.py  supervised_baseline.py
src/eval/: backbone_report.py  harness.py  metrics.py  report.py
src/preprocessing/: pipeline.py
tests/: test_placeholder.py  test_smoke.py
tests/acquisition/: test_hc3.py  test_multitude.py
tests/baselines/: test_supervised_baseline.py
tests/eval/: test_backbone_report.py  test_harness.py  test_metrics.py
tests/preprocessing/: test_pipeline.py  test_pooling.py
