[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-text-detector"
version = "0.1.0"
description = "Scalable Multilingual AI-Generated Text Detection – Month 1"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.40",
    "datasets>=2.19",
    "requests>=2.31",
    "torch>=2.2",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "pyarrow>=15",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
